@@ -38,6 +38,8 @@ type specific_operation =
   | Ioffset_loc of int * addressing_mode (* Add a constant to a location *)
   | Ifloatarithmem of float_operation * addressing_mode
                                        (* Float arith operation with memory *)
+  | Isqrtf                             (* floating-point square root *)
+  | Ifloatsqrtf of addressing_mode     (* floating-point square root from memory *)
 and float_operation =
     Ifloatadd | Ifloatsub | Ifloatmul | Ifloatdiv
 
@@ -102,6 +104,10 @@ let print_specific_operation printreg op ppf arg =
       fprintf ppf "[%a] := \"%s\"" (print_addressing printreg addr) arg lbl
   | Ioffset_loc(n, addr) ->
       fprintf ppf "[%a] +:= %i" (print_addressing printreg addr) arg n
+  | Isqrtf ->
+      fprintf ppf "sqrtf %a" printreg arg.(0)
+  | Ifloatsqrtf addr ->
+     fprintf ppf "sqrtf float64[%a]" (print_addressing printreg addr) [|arg.(0)|]
   | Ifloatarithmem(op, addr) ->
       let op_name = function
       | Ifloatadd -> "+f"
