@@ -543,6 +543,10 @@ let emit_instr fallthrough i =
         `	addq	${emit_int n}, {emit_addressing addr i.arg 0}\n`
     | Lop(Ispecific(Ifloatarithmem(op, addr))) ->
         `	{emit_string(instr_for_floatarithmem op)}	{emit_addressing addr i.arg 1}, {emit_reg i.res.(0)}\n`
+    | Lop(Ispecific Isqrtf) ->
+        `	sqrtsd	{emit_reg i.arg.(0)}, {emit_reg i.res.(0)}\n`
+    | Lop(Ispecific(Ifloatsqrtf addr)) ->
+        `	sqrtsd	{emit_addressing addr i.arg 0}, {emit_reg i.res.(0)}\n`
     | Lreloadretaddr ->
         ()
     | Lreturn ->
